Created the feature to hide a single status from your timeline.

--- a/mobile/www/i18n/en/status.json
+++ b/mobile/www/i18n/en/status.json
@@ -22,6 +22,10 @@
             "mention": "Your status has been announced",
             "success": "You have announced this status",
             "action": "Announce status"
+        },
+        "hide": {
+            "action": "Hide status",
+            "success": "This status has been removed from your timeline"
         }
     }
 
