--- a/mobile/www/i18n/fr/status.json
+++ b/mobile/www/i18n/fr/status.json
@@ -3,7 +3,7 @@
         "share": {
             "title": "a partagé",
             "mention": "Votre status a été partagé",
-            "success": "Vous avez partagé ce statut",
+            "toast": "Vous avez partagé ce statut",
             "action": "Partager"
         },
         "reply": "En réponse à ",
@@ -20,12 +20,12 @@
         "announcement": {
             "title": "a annoncé",
             "mention": "Votre status a été annoncé",
-            "success": "Vous avez annoncé ce statut",
+            "toast": "Vous avez annoncé ce statut",
             "action": "Annoncer"
         },
         "hide": {
             "action": "Cacher ce statut",
-            "success": "Ce statut a été supprimé de votre timeline"
+            "toast": "Ce statut a été supprimé de votre timeline"
         }
     }
 }
