--- a/mobile/www/i18n/en/user.json
+++ b/mobile/www/i18n/en/user.json
@@ -6,11 +6,12 @@
         "follow": "Follow",
         "unfollow": "Unfollow",
         "block":{
-            "success": "You have blocked this User. You won't see his posts anymore.",
-            "title": "Block"
+            "success": "You have blocked this user",
+            "title": "Block",
+            "confirmation": "Are you sure you want to block this user ? You won't be able to see his posts anymore."
         } ,
         "unblock": {
-            "success": "You unblocked this user.",
+            "success": "You have unblocked this user",
             "title": "Unblock"
         }
     }
