Added second ionicPopup for when server endpoint connect fails (instead of adding a row), fixed issue where endpoint text box and username text box would autocorrect input

--- a/mobile/www/i18n/en/server.json
+++ b/mobile/www/i18n/en/server.json
@@ -7,7 +7,10 @@
             "title": "Server",
             "current": "Current Server:",
             "change": "Change Server",
-            "error": "Cannot reach server.",
+            "error": {
+                "title": "Failed to change endpoint",
+                "body": "Cannot reach server."
+            },
             "authenticate": {
                 "title": "Successfully changed endpoint",
                 "body": "Please reauthenticate with the new server."
