Displaying a lock when a status is private

--- a/mobile/www/i18n/en/status.json
+++ b/mobile/www/i18n/en/status.json
@@ -29,6 +29,7 @@
         },
         "favorite": {
             "toast": "This status has been added at your favorites"
-        }
+        },
+        "private": "Private message"
     }
 }
