add page for reported statuses from more menu

--- a/mobile/www/i18n/en/more.json
+++ b/mobile/www/i18n/en/more.json
@@ -8,7 +8,8 @@
             "no": "You don't have any blocked user"
         },
         "reportedStatus":{
-            "title": "Reported Statuses"
+            "title": "Reported Statuses",
+            "no": "You don't have any reported statuses"
         },
         "logout": "Logout",
         "language": {
