--- a/mobile/www/i18n/fr/status.json
+++ b/mobile/www/i18n/fr/status.json
@@ -28,7 +28,8 @@
             "toast": "Ce statut a été supprimé de votre timeline"
         },
         "favorite": {
-            "toast": "Ce statut a été ajouté à vos favoris"
+            "add": "Ce statut a été ajouté à vos favoris",
+            "remove": "Ce statut a été supprimé de vos favoris"
         },
         "private": "Message privé"
     }
