French translation improved

--- a/mobile/www/i18n/fr/follow.json
+++ b/mobile/www/i18n/fr/follow.json
@@ -4,7 +4,7 @@
         "following": "Abonnement",
         "suggested": {
             "title": "Recommandé",
-            "who": "Qui Suivre"
+            "who": "Qui suivre"
         }
     }
 }
