--- a/mobile/www/i18n/fr/status.json
+++ b/mobile/www/i18n/fr/status.json
@@ -14,7 +14,7 @@
         "reportStatus":{
             "message": "Êtes-vous sûr de vouloir signaler ce statut?",
             "toast": "Vous avez signalé ce statut",
-            "approve": "Are you sure you approve this status?  It will continue to be displayed on the Company Timeline",
+            "approve": "Êtes-vous sûr de vouloir approuver cette publication ? Il restera inchangé sur les timelines",
             "approveToast": "Status has been approved",
             "delete": "Are you sure you want to delete this status?  It will be removed forever",
             "deleteToast": "Status has been deleted"
