created email to send to deactivated users, created ToastService

--- a/services/src/main/resources/META-INF/tatami/mails/messages/messages_en.properties
+++ b/services/src/main/resources/META-INF/tatami/mails/messages/messages_en.properties
@@ -40,6 +40,13 @@ reportedStatus.text1=Someone reported a status on Tatami:
 reportedStatus.text2=You can see this status on Tatami:
 reportedStatus.text3=Regards,
 
+deactivatedUser.title=Your Account is Deactivated
+deactivatedUser.greeting=Dear
+deactivatedUser.text1=An admin has deactivated your account.
+deactivatedUser.text2=Please contact your administrator for more details.
+deactivatedUser.text3=Regards,
+
+
 invitationMessage.title=One of your co-workers invited you to Tatami
 invitationMessage.greeting=Hello,
 invitationMessage.text1=invited you to Tatami, your company's social network.
