--- a/services/src/main/resources/META-INF/tatami/mails/messages/messages_fr.properties
+++ b/services/src/main/resources/META-INF/tatami/mails/messages/messages_fr.properties
@@ -34,11 +34,23 @@ userMention.text1=Vous avez été mentionné sur Tatami :
 userMention.text2=Pour voir ce message sur Tatami :
 userMention.text3=Cordialement,
 
-reportedStatus.title=Reported Status on Tatami
+reportedStatus.title=Statut Signalé sur Tatami
 reportedStatus.text1=Someone reported a status on Ta
 reportedStatus.greeting=Deartami:
 reportedStatus.text2=Pour voir ce message sur Tatami:
 reportedStatus.text3=Cordialement,
+
+reportedStatus.title=Statut Signalé sur Tatami
+reportedStatus.greeting=Cher
+reportedStatus.text1=Quelqu'un a signalé un statut sur Tatami
+reportedStatus.text2=Pour voir ce message sur Tatami:
+reportedStatus.text3=Cordialement,
+
+deactivatedUser.title=Your Account is Deactivated
+deactivatedUser.greeting=Cher
+deactivatedUser.text1=An admin has deactivated your account.
+deactivatedUser.text2=Please contact your administrator for more details.
+deactivatedUser.text3=Cordialement,
 
 invitationMessage.title=Un de vos collègues vous a invité sur Tatami
 invitationMessage.greeting=Bonjour
