Creating all users state

--- a/mobile/www/i18n/en/more.json
+++ b/mobile/www/i18n/en/more.json
@@ -16,7 +16,8 @@
             "change": "Language",
             "english": "English",
             "french": "French"
-        }
+        },
+        "allusers": "All users"
     }
 
 }
