--- a/mobile/www/i18n/fr/more.json
+++ b/mobile/www/i18n/fr/more.json
@@ -16,7 +16,8 @@
             "change": "Langue",
             "english": "Anglais",
             "french": "Français"
-        }
+        },
+        "allusers": "Tous les utilisateurs"
     }
 
 }
