update translate for deactivate user

--- a/mobile/www/i18n/en/user.json
+++ b/mobile/www/i18n/en/user.json
@@ -1,7 +1,12 @@
 {
     "user": {
         "profile": {
-            "title": "Profile"
+            "title": "Profile",
+            "options": {
+                "block": "Block User",
+                "deactivate": "Deactivate User",
+                "reactivate": "Reactivate User"
+            }
         },
         "follow": "Follow",
         "unfollow": "Unfollow",
