--- a/mobile/www/i18n/fr/user.json
+++ b/mobile/www/i18n/fr/user.json
@@ -1,7 +1,12 @@
 {
     "user": {
         "profile": {
-            "title": "Profil"
+            "title": "Profil",
+            "options": {
+                "block": "Bloquer cet utilisateur",
+                "deactivate": "Désactiver cet utilisateur",
+                "reactivate": "Réactiver cet utilisateur"
+            }
         },
         "follow": "S'abonner",
         "unfollow": "Se désabonner",
