send email to user when account is deactivated, fix translate for deactivating user

--- a/services/src/main/resources/META-INF/tatami/mails/messages/messages_en.properties
+++ b/services/src/main/resources/META-INF/tatami/mails/messages/messages_en.properties
@@ -35,7 +35,7 @@ userMention.text2=You can see this status on Tatami:
 userMention.text3=Regards,
 
 reportedStatus.title=Reported Status on Tatami
-reportedStatus.greeting=Dear
+reportedStatus.greeting=Dear admin,
 reportedStatus.text1=Someone reported a status on Tatami:
 reportedStatus.text2=You can see this status on Tatami:
 reportedStatus.text3=Regards,
