--- a/services/src/main/resources/META-INF/tatami/mails/messages/messages_fr.properties
+++ b/services/src/main/resources/META-INF/tatami/mails/messages/messages_fr.properties
@@ -35,13 +35,7 @@ userMention.text2=Pour voir ce message sur Tatami :
 userMention.text3=Cordialement,
 
 reportedStatus.title=Statut Signalé sur Tatami
-reportedStatus.text1=Someone reported a status on Ta
-reportedStatus.greeting=Deartami:
-reportedStatus.text2=Pour voir ce message sur Tatami:
-reportedStatus.text3=Cordialement,
-
-reportedStatus.title=Statut Signalé sur Tatami
-reportedStatus.greeting=Cher
+reportedStatus.greeting=Cher Admin
 reportedStatus.text1=Quelqu'un a signalé un statut sur Tatami
 reportedStatus.text2=Pour voir ce message sur Tatami:
 reportedStatus.text3=Cordialement,
