send users email when reporting a status, email template created to send emails users when account is deactivated, created column family for reported statuses

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -17,3 +17,14 @@ email.reset.greeting=Dear {0}
 email.reset.text1=For your TatamiJHipster account a password reset was requested, please click on the URL below to reset it:
 email.reset.text2=Regards,
 
+email.reported.title = TatamiJHipster status reported
+email.reported.greeting Dear admin
+email.reported.text1 = A user has reported a status as inappropriate or offensive.  To view the status, please click the url below
+emailreported.text2 = Regards,
+
+email.deactivate.title = TatamiJHipster Account Deactivated
+email.deactivate.greetnig Dear {0}
+email.deactivate.text1 = Your account has been deactivated.
+email.deactivate.text2 = For more information, please contact your administrator.
+email.deactivate.text3 = Regards,
+
