--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -17,3 +17,16 @@ email.reset.greeting=Cher {0}
 email.reset.text1=Un nouveau mot de passe pour votre compte TatamiJHipster a été demandé, veuillez cliquer sur le lien ci-dessous pour le réinitialiser:
 email.reset.text2=Cordialement,
 
+# Reported e-mail
+email.reported.title = TatamiJHipster status reported
+email.reported.greeting Dear admin
+email.reported.text1 = A user has reported a status as inappropriate or offensive.  To view the status, please click the url below
+emailreported.text2 = Regards,
+
+#Deactivated User e-mail
+email.deactivate.title = TatamiJHipster Account Deactivated
+email.deactivate.greetnig Dear {0}
+email.deactivate.text1 = Your account has been deactivated.
+email.deactivate.text2 = For more information, please contact your administrator.
+email.deactivate.text3 = Regards,
+
