--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -23,7 +23,7 @@ email.reported.text1 = A user has reported a status as inappropriate or offensiv
 emailreported.text2 = Regards,
 
 email.deactivate.title = TatamiJHipster Account Deactivated
-email.deactivate.greetnig Dear {0}
+email.deactivate.greeting Dear {0}
 email.deactivate.text1 = Your account has been deactivated.
 email.deactivate.text2 = For more information, please contact your administrator.
 email.deactivate.text3 = Regards,
