--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -25,7 +25,7 @@ emailreported.text2 = Regards,
 
 #Deactivated User e-mail
 email.deactivate.title = TatamiJHipster Account Deactivated
-email.deactivate.greetnig Dear {0}
+email.deactivate.greeting Dear {0}
 email.deactivate.text1 = Your account has been deactivated.
 email.deactivate.text2 = For more information, please contact your administrator.
 email.deactivate.text3 = Regards,
