--- a/mobile/www/i18n/en/status.json
+++ b/mobile/www/i18n/en/status.json
@@ -8,15 +8,15 @@
         },
         "reply": "In reply to ",
         "follower": "New follower",
-        "delete": "Are you sure you want to delete the status?",
+        "delete": "Are you sure you want to delete this status?",
         "report" : "Report",
         "reportMessage": "This status has been reported",
         "reportStatus":{
-            "message": "Are you sure you want to report this status?  This action cannot be undone",
+            "message": "Are you sure you want to report this status? This action cannot be undone.",
             "toast": "Status has been reported",
-            "approve": "Are you sure you approve this status?  It will continue to be displayed on the Company Timeline",
+            "approve": "Are you sure you approve this status? It will continue to be displayed on the Company Timeline.",
             "approveToast": "Status has been approved",
-            "delete": "Are you sure you want to delete this status?  It will be removed forever",
+            "delete": "Are you sure you want to delete this status? This action cannot be undone.",
             "deleteToast": "Status has been deleted"
         },
         "block": {
