--- a/mobile/www/i18n/en/post.json
+++ b/mobile/www/i18n/en/post.json
@@ -5,7 +5,7 @@
         "progress": "Post in progress...",
         "error": {
             "message": "Something went wrong. Returning to Timeline",
-            "truncated": "Your post has been truncated to remain under the max length"
+            "truncated": "Your post has been truncated to remain under the max length."
         }
     }
 }
