translate changes, display message when timeline, mentions or favorites is empty

--- a/mobile/www/i18n/en/home.json
+++ b/mobile/www/i18n/en/home.json
@@ -4,5 +4,7 @@
         "mentions": "Mentions",
         "favorites": "Favorites",
         "more": "More"
-    }
+    },
+    "noContent" : "No content found"
+
 }
