--- a/mobile/www/i18n/fr/home.json
+++ b/mobile/www/i18n/fr/home.json
@@ -4,5 +4,6 @@
         "mentions": "Mentions",
         "favorites": "Favoris",
         "more": "Plus"
-    }
+    },
+    "noContent" : "Cette section est actuellement vide"
 }
