--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -99,7 +99,11 @@
                 "following": "Following",
                 "followers": "Followers",
                 "trends": "Trends"
-            }
+            },
+
+            "block": "Block",
+            "blocked": "Blocked",
+            "unblock": "Unblock"
         },
 
         "searchPage": {
