Hide status from timeline feature

--- a/src/main/webapp/i18n/fr/status.json
+++ b/src/main/webapp/i18n/fr/status.json
@@ -14,6 +14,7 @@
         "announce": "Annoncer",
         "isAnnounced": "Annoncé par",
         "viewConversation": "Voir La Conversation",
-        "shares": "Partages"
+        "shares": "Partages",
+        "hide": "Cacher ce statut"
     }
 }
