--- a/src/main/webapp/i18n/en/status.json
+++ b/src/main/webapp/i18n/en/status.json
@@ -14,6 +14,8 @@
         "announce": "Announce",
         "isAnnounced": "Announced by",
         "viewConversation": "View Conversation",
-        "shares": "Shares"
+        "shares": "Shares",
+        "hide": "Hide from Timeline"
+
     }
 }
