add dropdown menu on timeline to report, and hide statuses and block users

--- a/src/main/webapp/i18n/en/status.json
+++ b/src/main/webapp/i18n/en/status.json
@@ -15,7 +15,9 @@
         "isAnnounced": "Announced by",
         "viewConversation": "View Conversation",
         "shares": "Shares",
-        "hide": "Hide from Timeline"
+        "hide": "Hide from Timeline",
+        "report": "Report this Status",
+        "block": "Block this User"
 
     }
 }
