--- a/src/main/webapp/i18n/fr/status.json
+++ b/src/main/webapp/i18n/fr/status.json
@@ -15,6 +15,8 @@
         "isAnnounced": "Annoncé par",
         "viewConversation": "Voir La Conversation",
         "shares": "Partages",
-        "hide": "Cacher ce statut"
+        "hide": "Cacher ce statut",
+        "report": "Report this Status",
+        "block": "Block this User"
     }
 }
