New tab in Users page for managing blocked users

--- a/src/main/webapp/i18n/en/account.json
+++ b/src/main/webapp/i18n/en/account.json
@@ -54,7 +54,8 @@
             "following": "Following",
             "recommended": "Recommended",
             "search": "Search",
-            "deactivated": "This user is deactivated"
+            "deactivated": "This user is deactivated",
+            "blocked": "Blocked"
         },
 
         "groups": {
