Message for new message notifications

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -184,7 +184,8 @@
         },
         "field": {
             "id": "ID"
-        }
+        },
+        "newMessage": "New message"
     },
     "entity": {
         "action": {
