add page for admins to view reported statuses

--- a/src/main/webapp/i18n/en/account.json
+++ b/src/main/webapp/i18n/en/account.json
@@ -9,7 +9,7 @@
             "lastName": "Last Name",
             "jobTitle": "Job Title",
             "phoneNumber": "Phone Number",
-            "jobDescription": "Job Description",
+            "jobDescription": "Experience",
             "delete": "Delete your account",
             "confirmDelete": "You are about to delete your account. Are you sure?",
             "remainingChar": "Characters Left:",
