--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -132,6 +132,7 @@
             "admin": {
                 "main": "Administration",
                 "user-management": "User management",
+                "reported-statuses": "Reported Statuses",
                 "tracker": "User tracker",
                 "metrics": "Metrics",
                 "health": "Health",
