--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -98,7 +98,8 @@
                 "statuses": "Statuses",
                 "following": "Following",
                 "followers": "Followers",
-                "trends": "Trends"
+                "trends": "Trends",
+                "jobExperience": "Experience"
             },
 
             "block": "Block",
