--- a/src/main/webapp/i18n/en/status.json
+++ b/src/main/webapp/i18n/en/status.json
@@ -17,7 +17,9 @@
         "shares": "Shares",
         "hide": "Hide from Timeline",
         "report": "Report this Status",
-        "block": "Block this User"
+        "block": "Block this User",
+        "approve": "Approve",
+        "remove": "Remove"
 
     }
 }
