--- a/src/main/webapp/i18n/fr/status.json
+++ b/src/main/webapp/i18n/fr/status.json
@@ -17,6 +17,8 @@
         "shares": "Partages",
         "hide": "Cacher ce statut",
         "report": "Report this Status",
-        "block": "Block this User"
+        "block": "Block this User",
+        "approve": "Accepter",
+        "remove": "Retirer"
     }
 }
